# CS260-floating-point-formats

./: .gitignore  CMakeLists.txt  README.md
configs/: fir_test.json  full_sweep.json  small_sanity.json  sweep_example.json
include/algorithms/: fir.hpp  gradient_descent.hpp  matmul.hpp  newton.hpp
include/core/: io.hpp  metrics.hpp  random.hpp
include/formats/: precision.hpp  quantize.hpp
src/: main.cpp
src/core/: io.cpp
src/formats/: precision.cpp
tests/: fir_tests.cpp  io_tests.cpp  iterative_tests.cpp  matmul_tests.cpp
